Created handlers for task
