# server/internal/service/get_plants_with_care_rules_v1.go
@@ -8,24 +8,24 @@ import (
 	"google.golang.org/grpc/status"
 )
 
-func (s *Implementation) GetPlantsWithCareRules(
+func (s *Implementation) GetPlantsWithCareRulesV1(
 	ctx context.Context,
-	req *api.GetPlantsWithCareRuleV1Request,
-) (*api.GetPlantsWithCareRuleV1Response, error) {
+	req *api.GetPlantsWithCareRulesV1Request,
+) (*api.GetPlantsWithCareRulesV1Response, error) {
 	plants, err := s.storage.GetPlantsWithCareRules(ctx)
 	if err != nil {
 		return nil, status.Error(codes.Internal, "internal error occured")
 	}
-	result := make([]*api.GetPlantsWithCareRuleV1Response_Plant, 0, len(plants))
+	result := make([]*api.GetPlantsWithCareRulesV1Response_Plant, 0, len(plants))
 
 	for _, p := range plants {
-		result = append(result, &api.GetPlantsWithCareRuleV1Response_Plant{
+		result = append(result, &api.GetPlantsWithCareRulesV1Response_Plant{
 			Species: p.Species,
 			Image:   p.Image,
 			Id:      p.ID.String(),
 		})
 	}
-	return &api.GetPlantsWithCareRuleV1Response{
+	return &api.GetPlantsWithCareRulesV1Response{
 		Plants: result,
 	}, nil
 }
